[package]
name = "simple-webserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros", "io-util", "net"] }
serde_json = "1"
clap = { version = "4.5.0", features = ["derive"] }